--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     margin: 0;
     background-color: #eee;
     font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
 }
 h1{
     text-align: center;
@@ -18,7 +19,7 @@ h1{
 @media screen and (max-width: 1238px) {
     h1{
         width: 100%;
-        position: fixed;
+        position: fixed; 
         left: 0;
         top: 0;
         z-index: 100;
@@ -111,6 +112,11 @@ h1{
             background-color: black;
             opacity: 0.4;
             cursor: no-drop;
+        }
+    }
+    @media screen and (max-width: 768px) {
+        .controls{
+            width: 350px; 
         }
     }
     .key-colors{
@@ -208,6 +214,11 @@ h1{
     }
     .message span{
         font-size: 30px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .message{
+        top: 15%;
     }
 }
 footer{
